--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "6.8.2",
     "bcryptjs": "3.0.2",
+    "passport-jwt": "4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "3.24.4",
@@ -46,6 +47,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/passport-jwt": "4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.0.1",
